# llama.cpp

./: CMakeLists.txt
.github/workflows/: mesh-ci.yml
common/: arg.cpp  common.h
ggml/include/: ggml-rpc.h
ggml/src/: ggml-backend.cpp
ggml/src/ggml-cpu/: repack.cpp  traits.cpp  traits.h
ggml/src/ggml-rpc/: ggml-rpc.cpp
include/: llama.h  llama_stage_abi.h
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.h  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-stage.cpp
src/models/: deepseek2.cpp  gemma-embedding.cpp  gemma.cpp  gemma3.cpp  gemma3n-iswa.cpp  gemma4-iswa.cpp  llama.cpp  qwen2.cpp  qwen3.cpp  qwen35moe.cpp
tests/: CMakeLists.txt  test-rpc-peer-inference.sh  test-rpc-peer-transfer.cpp
tools/: CMakeLists.txt
tools/layer-split/: CMakeLists.txt  README.md  layer-split.cpp
tools/moe-analyze/: CMakeLists.txt  README.md  moe-analyze.cpp
tools/moe-components/: CMakeLists.txt  README.md  moe-components.cpp
tools/moe-ondemand/: CMakeLists.txt  moe-ondemand.cpp
tools/moe-split/: CMakeLists.txt  README.md  moe-split.cpp
tools/prefill-handoff/: CMakeLists.txt  prefill-handoff.cpp
tools/rpc/: README.md  rpc-server.cpp
tools/server/: server-context.cpp  server-task.cpp  server-task.h
(+1 files in other folders)
